--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Properties
-spring.datasource.url: jdbc:mysql://${MYSQL_DB_HOST}:${MYSQL_DB_PORT}/${MYSQL_DATABASE}
-spring.datasource.username: ${DATABASE_USERNAME}
-spring.datasource.password: ${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://${MYSQL_DB_HOST}:${MYSQL_DB_PORT}/${MYSQL_DATABASE}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
@@ -13,3 +13,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # ===============================
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
+
+
+#==============================
+#Stack Driver configuration
+#==============================
+
+spring.cloud.gcp.logging.enabled=true
+spring.cloud.gcp.project-id=pks-capgemini-cloud
