--- a/src/main/k8s/secret.yaml
+++ b/src/main/k8s/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: spring-cronjob-currency-gcp-secret
+  name: gcp-stackdriver-key
 type: Opaque
 data:
-  gcp-cred: key
+  gcp-cred: <BASE64_ENCODED_STACK_DRIVER_GCP_KEY>
