--- a/src/main/k8s/configMap.yaml
+++ b/src/main/k8s/configMap.yaml
@@ -9,5 +9,4 @@ data:
   DATABASE_USERNAME: 'cronJobUser'
   DATABASE_PASSWORD: 'SuperSecretMysqlPwd'
   SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: 'org.hibernate.dialect.MySQL5Dialect'
-  GOOGLE_APPLICATION_CREDENTIALS: /etc/gcp/gcp-cred.json
-  
+  GOOGLE_APPLICATION_CREDENTIALS: /var/secrets/google/key.json
